[workspace]
members = [
    "declaring-variables",
    "mutable-variables",
    "playground",
    "printing-hello-world",
    "constants",
    "primitive-data-types",
    "converting-numerical-types",
    "mathematical-operations",
    "sum-of-array",
    "tuples",
    "the-unit-type",
    "functions"
    
]
resolver = "3"